deploy/deploy-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordermanager-http
  namespace: ordermanager
spec:
  ingressClassName: nginx
  rules:  
    - http:
        paths:              
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: ordermanager-http
              port:
                number: 80
