deploy/deploy-ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-service
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:  
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port:
                number: 9090
